--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <div class="messages-container" id="messagesContainer">
                 <div class="welcome-message">
                     <div class="welcome-icon">🤖</div>
-                    <h2>Welcome to AI Assistant</h2>
-                    <p>How can I help you today?</p>
-                    <p>DYH</p>
+                    <h2>欢迎使用《工业设计史》知识点查询小助手</h2>
+                    <p>ver. 0.2</p>
+                    <p>2025-11-17 提升了知识点总结能力</p>
+                    <p>Made by DYH</p>
                 </div>
             </div>
         </main>
